@@ -4,6 +4,7 @@ October 30, 2009 Wei Mingzhi <weimingzhi@gmail.com>
  * plugins/dfsound/spucfg-0.1df/dfsound.glade2: Likewise.
  * plugins/dfxvideo/gpucfg-0.1df/dfxvideo.glade2: Likewise.
  * plugins/dfinput/pad.h: Declare several variables as volatile.
+ * plugins/dfinput/Makefile.am: Use $(SDL_CONFIG) instead of "sdl-config".
 
 October 29, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
